__NEXT__
new: #141 - Finished implementation of Helm SDK API (`add` and `remove` methods)